--- a/Gallery App/Base.lproj/Main.storyboard
+++ b/Gallery App/Base.lproj/Main.storyboard
@@ -33,6 +33,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NfZ-dE-NZV" userLabel="tableViewHolder">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="haz-n1-4JF">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="haz-n1-4JF" secondAttribute="bottom" id="r03-Xs-CoP"/>
+                                    <constraint firstItem="haz-n1-4JF" firstAttribute="leading" secondItem="NfZ-dE-NZV" secondAttribute="leading" id="s2b-of-nPZ"/>
+                                    <constraint firstAttribute="trailing" secondItem="haz-n1-4JF" secondAttribute="trailing" id="ui1-JV-L4t"/>
+                                    <constraint firstItem="haz-n1-4JF" firstAttribute="top" secondItem="NfZ-dE-NZV" secondAttribute="top" id="ywc-WZ-aRd"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CTB-Ma-Ql8" userLabel="collectionViewHolder">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
@@ -65,22 +81,9 @@
                                     <constraint firstItem="Xv7-SL-8wk" firstAttribute="leading" secondItem="CTB-Ma-Ql8" secondAttribute="leading" id="zFy-HB-jdU"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NfZ-dE-NZV" userLabel="tableViewHolder">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="haz-n1-4JF">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    </tableView>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="haz-n1-4JF" secondAttribute="bottom" id="r03-Xs-CoP"/>
-                                    <constraint firstItem="haz-n1-4JF" firstAttribute="leading" secondItem="NfZ-dE-NZV" secondAttribute="leading" id="s2b-of-nPZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="haz-n1-4JF" secondAttribute="trailing" id="ui1-JV-L4t"/>
-                                    <constraint firstItem="haz-n1-4JF" firstAttribute="top" secondItem="NfZ-dE-NZV" secondAttribute="top" id="ywc-WZ-aRd"/>
-                                </constraints>
-                            </view>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="yI3-Q0-5f7">
+                                <rect key="frame" x="197" y="465" width="20" height="20"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -90,13 +93,16 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="CTB-Ma-Ql8" secondAttribute="bottom" id="Cj5-E9-qhJ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CTB-Ma-Ql8" secondAttribute="trailing" id="MUZ-Yc-o2b"/>
                             <constraint firstItem="CTB-Ma-Ql8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Q1T-0E-rNf"/>
+                            <constraint firstItem="yI3-Q0-5f7" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="TM3-ui-vTQ"/>
                             <constraint firstItem="NfZ-dE-NZV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="cnF-VU-BUc"/>
+                            <constraint firstItem="yI3-Q0-5f7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="idf-d3-kH0"/>
                             <constraint firstItem="CTB-Ma-Ql8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="lru-g9-cKL"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NfZ-dE-NZV" secondAttribute="bottom" id="rc4-MG-oRF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ijq-ZW-jSb"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="yI3-Q0-5f7" id="4bD-HR-gbH"/>
                         <outlet property="collectionView" destination="Xv7-SL-8wk" id="Fbm-yl-XNS"/>
                         <outlet property="collectionViewHolder" destination="CTB-Ma-Ql8" id="a5M-AF-h3f"/>
                         <outlet property="tableView" destination="haz-n1-4JF" id="ms1-Qy-vw7"/>
