--- a/Gallery App/UICollectionViewCell/GalleryListCellCollectionViewCell.xib
+++ b/Gallery App/UICollectionViewCell/GalleryListCellCollectionViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="241" height="191"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="vdk-WY-u87">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="vdk-WY-u87">
                         <rect key="frame" x="5" y="5" width="231" height="120"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="120" id="z0k-hB-tOu"/>
