--- a/Gallery App/UITableViewCell/GalleryListCellTableViewCell.xib
+++ b/Gallery App/UITableViewCell/GalleryListCellTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="579" height="88"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="lLW-dS-Wvf">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholderImage" translatesAutoresizingMaskIntoConstraints="NO" id="lLW-dS-Wvf">
                         <rect key="frame" x="5" y="5" width="80" height="80"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="80" id="4ev-8y-nMb"/>
